Migrated controller + password on join
