# src/swagger_output.json
@@ -207,8 +207,16 @@
             "required": true,
             "schema": {
               "type": "string"
-            },
-            "description": "Room Id"
+            }
+          },
+          {
+            "name": "password",
+            "description": "Room password",
+            "required": false,
+            "in": "query",
+            "schema": {
+              "type": "string"
+            }
           }
         ],
         "responses": {
@@ -217,6 +225,9 @@
           },
           "400": {
             "description": "Bad Request"
+          },
+          "401": {
+            "description": "Unauthorized"
           },
           "403": {
             "description": "Forbidden"
